# LibOpenNFS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
include/: MusicLoader.h
include/Common/: Enums.h  ISerializable.h  Utils.h
include/NFS2/: Common.h  Loader.h
include/NFS2/COL/: ColFile.h
include/NFS2/GEO/: GeoFile.h
include/NFS2/PSH/: PshFile.h
include/NFS2/TRK/: ExtraObjectBlock.h  StructureBlock.h  StructureRefBlock.h  SuperBlock.h  TrackBlock.h  TrkFile.h
include/NFS3/: Common.h  NFS3Loader.h
include/NFS3/COL/: ColFile.h
include/NFS3/FCE/: FceFile.h
include/NFS3/FEDATA/: FedataFile.h
include/NFS3/FFN/: FfnFile.h
include/NFS3/FRD/: ExtraObjectBlock.h  FrdFile.h  PolyBlock.h  TexBlock.h  TrkBlock.h
include/NFS3/SPEEDS/: SpeedsFile.h
include/NFS4/PC/: NFS4Loader.h
include/NFS4/PS1/: NFS4PS1Loader.h
include/NFS5/: NFS5Loader.h
include/NFS5/CRP/: BasicTypes.hpp  CRPFile.h  Detail.hpp  Parts.hpp  Types.hpp
include/NFS5/VIV/: VIVFile.h
include/Shared/: CanFile.h  HrzFile.h
sources/: CarLoader.cpp  MusicLoader.cpp  TrackLoader.cpp  Utils.cpp
sources/Common/: ISerializable.cpp  Utils.cpp
sources/NFS2/: Loader.cpp
sources/NFS2/COL/: ColFile.cpp
sources/NFS2/GEO/: GeoFile.cpp
sources/NFS2/PSH/: PshFile.cpp
sources/NFS2/TRK/: ExtraObjectBlock.cpp  StructureBlock.cpp  StructureRefBlock.cpp  SuperBlock.cpp  TrackBlock.cpp  TrkFile.cpp
sources/NFS3/: NFS3Loader.cpp
sources/NFS3/COL/: ColFile.cpp
sources/NFS3/FCE/: FceFile.cpp
sources/NFS3/FEDATA/: FedataFile.cpp
sources/NFS3/FFN/: FfnFile.cpp
sources/NFS3/FRD/: ExtraObjectBlock.cpp  FrdFile.cpp  PolyBlock.cpp  TexBlock.cpp  TrkBlock.cpp
sources/NFS3/SPEEDS/: SpeedsFile.cpp
sources/NFS4/PC/: NFS4Loader.cpp
sources/NFS4/PS1/: NFS4PS1Loader.cpp
sources/NFS5/: NFS5Loader.cpp
sources/NFS5/CRP/: CRPFile.cpp
sources/NFS5/VIV/: VIVFile.cpp
sources/Shared/: CanFile.cpp  HrzFile.cpp
